[package]
name = "ecoblock-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ecoblock_core = { path = "../ecoblock-core" }
ecoblock_crypto = { path = "../ecoblock-crypto" }
ecoblock-storage = { path = "../ecoblock-storage" }
ecoblock_network = { path = "../ecoblock-network" }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
axum-extra = { version = "0.9", features = ["typed-header"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
